--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Aggie House</title>
   </head>
-  <body>
+  <body style="background-color: #E8E2DC">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
