--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="background-color: #E8E2DC">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
